Fix some overflow issues

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   body {
     margin: unset;
     min-height: 100dvh;
+    max-width: 100dvw;
   }
 
   button,
@@ -117,29 +118,33 @@ svg {
   display: grid;
 }
 
+/*
 aside,
 header {
   position: sticky;
   top: 0;
-  z-index: 100;
   align-self: start;
 }
 
 aside {
   height: 100dvh;
+  z-index: 101;
 }
+*/
+
 
 /* Wrapper */
 
 #wrapper {
   width: 100%;
   height: 100%;
-  grid-template-columns: 2fr 9fr;
+  grid-template-columns: auto 1fr;
   grid-template-rows: auto 1fr;
   grid-template-areas: 
     "aside header"
     "aside main";
   font-family: Roboto, sans-serif;
+  overflow: hidden; /* Necessary */
 }
 
 /* Aside */
@@ -193,7 +198,7 @@ header {
 }
 
 header nav {
-  grid-template-columns: 1fr max-content;
+  grid-template-columns: 1fr auto;
   align-items: center;
   gap: 3em;
 }
@@ -204,7 +209,7 @@ header nav > * {
 }
 
 header nav form {
-  grid-template-columns: max-content 1fr;
+  grid-template-columns: auto 1fr;
   gap: 0.75em;
 }
 
@@ -246,12 +251,12 @@ header nav div {
 }
 
 #greeting-widget {
-  justify-content: start;
+  grid-template-columns: max-content 1fr;
 }
 
 #greeting-widget img {
   height: 3em;
-  width: max-content;
+  width: 3em;
 }
 
 .small {
@@ -377,5 +382,17 @@ main p {
   color: var(--color-black);
 }
 
+@media only screen and (max-width: 850px) {
+  #wrapper {
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+    "aside"
+    "header"
+    "main";
+  }
 
+  aside nav {
+    display: none;
+  }
+}
 
